# ripgrep-edit

./: Cargo.toml  README.md  build.rs
.copr/: Makefile
.distro/: ripgrep-edit.spec  ripgrep-edit.spec.template  rust2rpm.toml
emacs/: rg-edit.el  ripgrep-edit.el
src/: args.rs  gbnf.rs  main.rs
