[package]
name = "ripgrep-edit"
version = "0.3.12"
edition = "2024"
description = "Edit ripgrep search results across multiple files"
readme = "README.md"
repository = "https://gitlab.com/aarcange/ripgrep-edit"
license = "GPL-3.0-or-later OR AGPL-3.0-or-later"
keywords = ["ripgrep", "rg", "gptel", "gptel-rewrite", "llm"]

[dependencies]
tempfile = "3.23"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
either = "1.15"
ctrlc = { version = "3.5", features = ["termination"] }
rayon = "1"
num_cpus = "1"
triple_accel = { version = "0.4", optional = true }
textdistance = { version = "1.1", optional = true }

[features]
default = ["triple_accel"]

[[bin]]
name = "rg-edit"
path = "src/main.rs"

[build-dependencies]
clap_mangen = "0.2"
clap = { version = "4.5", features = ["derive"] }
